# RobotFrameWork

./: .gitignore  pyproject.toml  readme.txt
TestsDemo/: Locators.robot  MathOperations.py  TestCase1.robot  TestCase2.robot  TestSuite.robot
